--- a/web/templates/galleryImage.html
+++ b/web/templates/galleryImage.html
@@ -11,22 +11,18 @@
 	{% if gallery is not None and image is not None %}
 		<div class="panel panel-info">
 			<div class="panel-heading">
-				<table style="width: 100%">
-					<tbody>
-						<tr>
-							<td>
-								<strong><span class="glyphicon glyphicon-picture"></span>&nbsp;&nbsp;{{ image.name }}</strong>
-								{% if user.is_authenticated %}
-									&nbsp;<a href="/admin/web/image/{{ image.image_id }}/change/" title="Upravit"><span class="glyphicon glyphicon-wrench"></span></a>
-								{% endif %}
-							</td>
-							<td style="text-align:right">
-								<span class="small"><strong><a href="/gallery/{{ gallery.gallery_id }}" title="Nadřazená galerie">{{ gallery.name }}</a></strong>
-								| {{ image.author.first_name }} {{ image.author.last_name }} | <span data-toggle="tooltip" title="Poslední úprava: {{ image.date_edited }}"><em>{{ image.date_created }}</em></span></span>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="row">
+					<div class="col-md-6">
+						<strong><span class="glyphicon glyphicon-picture"></span>&nbsp;&nbsp;{{ image.name }}</strong>
+						{% if user.is_authenticated %}
+							&nbsp;<a href="/admin/web/image/{{ image.image_id }}/change/" title="Upravit"><span class="glyphicon glyphicon-wrench"></span></a>
+						{% endif %}
+					</div>
+					<div class="col-md-6 text-right">
+						<span class="small"><strong><a href="/gallery/{{ gallery.gallery_id }}" title="Nadřazená galerie">{{ gallery.name }}</a></strong>
+						| {{ image.author.first_name }} {{ image.author.last_name }} | <span data-toggle="tooltip" title="Poslední úprava: {{ image.date_edited }}"><em>{{ image.date_created }}</em></span></span>
+					</div>
+				</div>
 			</div>
 			<div class="panel-body">
 				<div class="row">
@@ -70,7 +66,7 @@
 							{% endif %}
 						</div>
 						<div class="text-center border">
-							<img src="{{ image.image.url }}" alt="{{ image.name }}" title="{{ image.name }}" width="75%" class="gallery-image" />
+							<img src="{{ image.image.url }}" alt="{{ image.name }}" title="{{ image.name }}" class="gallery-image" />
 						</div>
 						<div class="text-center border gallery-image-nav">
 							{% if user.is_authenticated %}
@@ -117,27 +113,19 @@
 					<div class="row">
 						<strong>&nbsp;&nbsp;Upravit aktuální obrázek:</strong>
 						<div class="form-wrapper">
-							<table style="width: 100%">
-								<tr>
-									<td>
-										<form class="form-inline" method="post" action="/gallery/{{ gallery.gallery_id }}/{{ image.image_id }}/move">
-											{% csrf_token %}
-											<div class="form-group">{% bootstrap_form moveImageForm %}</div>
-											<span data-toggle="tooltip" title="Přesunout do vybrané galerie"><button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Přesunout obrázek</button></span>
-										</form>
-									</td>
-									<td>
-										<a href="/admin/web/image/{{ image.image_id }}/change/">
-											<span data-toggle="tooltip" title="Upravit data obrázku"><button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-wrench"></span>&nbsp;&nbsp;Upravit obrázek</button></span>
-										</a>
-									</td>
-									<td>
-										<a href="/gallery/{{ gallery.gallery_id }}/{{ image.image_id }}/delete" onclick="return confirmation()">
-											<span data-toggle="tooltip" title="Odstranit tento obrázek"><button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Smazat obrázek</button></span>
-										</a>
-									</td>
-								</tr>
-							</table>
+							<form class="form-inline" method="post" action="/gallery/{{ gallery.gallery_id }}/{{ image.image_id }}/move">
+								{% csrf_token %}
+								<div class="form-group">{% bootstrap_form moveImageForm %}</div>
+								<span data-toggle="tooltip" title="Přesunout do vybrané galerie"><button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Přesunout obrázek</button></span>
+							</form>
+							<div style="margin-top: 10px;">
+								<a href="/admin/web/image/{{ image.image_id }}/change/">
+									<span data-toggle="tooltip" title="Upravit data obrázku"><button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-wrench"></span>&nbsp;&nbsp;Upravit obrázek</button></span>
+								</a>
+								<a href="/gallery/{{ gallery.gallery_id }}/{{ image.image_id }}/delete" onclick="return confirmation()">
+									<span data-toggle="tooltip" title="Odstranit tento obrázek"><button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Smazat obrázek</button></span>
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="row">
