--- a/web/templates/galleryIndex.html
+++ b/web/templates/galleryIndex.html
@@ -11,23 +11,19 @@
 	{% for galleryObject in galleryList %}
 		<div class="panel panel-info">
 			<div class="panel-heading">
-				<table style="width: 100%">
-					<tbody>
-						<tr>
-							<td>
-								<a href="/gallery/{{ galleryObject.0.gallery_id }}" title="Detail galerie">
-									<strong><span class="glyphicon glyphicon-picture"></span>&nbsp;&nbsp;{{ galleryObject.0.name }}</strong>
-								</a>
-								{% if user.is_authenticated %}
-									&nbsp;<a href="/admin/web/gallery/{{ galleryObject.0.gallery_id }}/change/" title="Upravit"><span class="glyphicon glyphicon-wrench"></span></a>
-								{% endif %}
-							</td>
-							<td style="text-align:right">
-								<span class="small"><strong>Index</strong> | {{ galleryObject.0.author.first_name }} {{ galleryObject.0.author.last_name }} | <span data-toggle="tooltip" title="Poslední úprava: {{ galleryObject.0.date_edited }}"><em>{{ galleryObject.0.date_created }}</em></span></span>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="row">
+					<div class="col-md-6">
+						<a href="/gallery/{{ galleryObject.0.gallery_id }}" title="Detail galerie">
+							<strong><span class="glyphicon glyphicon-picture"></span>&nbsp;&nbsp;{{ galleryObject.0.name }}</strong>
+						</a>
+						{% if user.is_authenticated %}
+							&nbsp;<a href="/admin/web/gallery/{{ galleryObject.0.gallery_id }}/change/" title="Upravit"><span class="glyphicon glyphicon-wrench"></span></a>
+						{% endif %}
+					</div>
+					<div class="col-md-6 text-right">
+						<span class="small"><strong>Index</strong> | {{ galleryObject.0.author.first_name }} {{ galleryObject.0.author.last_name }} | <span data-toggle="tooltip" title="Poslední úprava: {{ galleryObject.0.date_edited }}"><em>{{ galleryObject.0.date_created }}</em></span></span>
+					</div>
+				</div>
 			</div>
 			<div class="panel-body">
 				<div class="col-md-12">
@@ -42,19 +38,15 @@
 					</p>
 					<p class="text-justify border"><strong>Obrázky v galerii:</strong></p>
 					{% if galleryObject.1 > 0 %}
-						<table style="width: 100%; margin-bottom: 10px">
-							<tbody>
-								<tr>
-									{% for image in galleryObject.2 %}
-										<td style="text-align: center">
-											<a href="/gallery/{{ galleryObject.0.gallery_id }}/{{ image.image_id }}" title="Detail obrázku">
-												<img src="{{ image.image.url }}" alt="{{ image.name }}" title="Detail obrázku" height="120" width="160" style="border: 1px solid #000033;" />
-											</a>
-										</td>
-									{% endfor %}
-								</tr>
-							</tbody>
-						</table>
+						<div class="row">
+							{% for image in galleryObject.2 %}
+								<div class="col-md-2 text-center">
+									<a href="/gallery/{{ galleryObject.0.gallery_id }}/{{ image.image_id }}" title="Detail obrázku">
+										<img src="{{ image.image.url }}" alt="{{ image.name }}" title="Detail obrázku" class="gallery-thumb" />
+									</a>
+								</div>
+							{% endfor %}
+						</div>
 						<p class="text-justify border">
 							Celkem <strong>{{ galleryObject.1 }}</strong>
 							{% if galleryObject.1 < 2 %}
