--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,9 +13,9 @@
 			<strong><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;Historie městské části Praha-Krč</strong>
 		</div>
 		<div class="panel-body">
-			<p class="text-justify border">Vítejte na stránkách, kde bychom vám rádi on-line zprostředkovali naši sbírku starých pohledů a fotografií doplněných o informace o pražské Krči. Cílem je představit minulost této vesnice a později městské části všem návštěvníkům tohoto webu z řad zájemců o historii, místních obyvatel i náhodných návštěvníků. V <a href="/gallery">galerii</a> naleznete oskenované ukázky originálních pohledů, dobových materiálů a vlastních fotografií. V sekci <a href="/articles">články</a> se postupně objevují různá historická povídání a v oddílu <a href="/books">knihovna</a> odkazy na tematickou literaturu. Pokud vás toto téma zajímá a chtěli byste se dozvědět víc, nebo chcete přímo navázat kontakt a spolupráci, můžete nás <a href="/contact">kontaktovat</a>. V neposlední řadě nabízíme <a href="/links">odkazy</a> související se sbíráním starých pohledů, s výzkumem historie Prahy a dalšími zajímavými tématy.</p>
+			<p class="text-justify border">Vítejte na stránkách, kde bychom vám rádi on-line zprostředkovali naši sbírku starých pohledů a fotografií doplněných o informace o pražské Krči. Cílem je představit minulost této vesnice a později městské části všem návštěvníkům tohoto webu z řad zájemců o historii, místních obyvatel i náhodných návštěvníků. V <a href="/gallery">galerii</a> naleznete oskenované ukázky originálních pohledů, dobových materiálů a vlastních fotografií. V sekci <a href="/articles">články</a> se postupně objevují různá historická povídání a v oddílu <a href="/books">knihovna</a> odkazy na tematickou literaturu. V neposlední řadě nabízíme <a href="/links">odkazy</a> související se sbíráním starých pohledů, s výzkumem historie Prahy a dalšími zajímavými tématy. Pokud vás historie Krče zajímá a chtěli byste se dozvědět víc, nebo chcete přímo navázat kontakt a spolupráci, můžete nás kontaktovat. </p>
 			<p class="text-justify border"><strong>Alois Sečkár</strong> a <strong>Anton Sečkár</strong></p>
-			<p class="text-justify border">&copy; 2012 - 2019</p>
+			<p class="text-justify border">&copy; 2012 - 2020</p>
 		</div>
 	</div>
 	<div class="panel panel-info">
@@ -23,23 +23,17 @@
 			<strong><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;Kontakty</strong>
 		</div>
 		<div class="panel-body">
-			<div class="table-responsive">
-				<table class="table table-hover">
-					<tbody>
-						<tr>
-							<td><strong>Alois Sečkár</strong></td>
-							<td>seckar@svobodni.cz</td>
-							<td>721 302 700</td>
-							<td><a href="https://www.facebook.com/alois.seckar" title="Facebook"><img src="{% static 'facebook.png' %}" title="FB" alt="FB" width="24" /></a></td>
-						</tr> 
-						<tr>
-							<td><strong>Anton Sečkár</strong></td>
-							<td>rakcesa@seznam.cz</td>
-							<td>723 146 074</td>
-							<td><a href="https://www.facebook.com/anton.seckar" title="Facebook"><img src="{% static 'facebook.png' %}" title="FB" alt="FB" width="24" /></a></td>
-						</tr> 
-					</tbody>
-				</table>
+			<div class="row">
+				<div class="col-md-3 text-center"><strong>Alois Sečkár</strong></div>
+				<div class="col-md-3 text-center">seckar@svobodni.cz</div>
+				<div class="col-md-3 text-center">721 302 700</div>
+				<div class="col-md-3 text-center"><a href="https://www.facebook.com/alois.seckar" title="Facebook"><img src="{% static 'facebook.png' %}" title="FB" alt="FB" width="24" /></a></div>
+			</div>
+			<div class="row">
+				<div class="col-md-3 text-center"><strong>Anton Sečkár</strong></div>
+				<div class="col-md-3 text-center">rakcesa@seznam.cz</div>
+				<div class="col-md-3 text-center">723 146 074</div>
+				<div class="col-md-3 text-center"><a href="https://www.facebook.com/anton.seckar" title="Facebook"><img src="{% static 'facebook.png' %}" title="FB" alt="FB" width="24" /></a></div>
 			</div>
 		</div>
 	</div>
@@ -50,19 +44,12 @@
 			</a>
 		</div>
 		<div class="panel-body">
-			<div class="table-responsive">
-				<table class="table table-hover">
-					<tbody>
-						{% for news in lastNews %}
-						<tr>
-							<td><strong>{{ news.date_created }}</strong></td>
-							<td>{{ news.author.first_name }} {{ news.author.last_name }}</td>
-							<td>{% autoescape off %} {{ news.content }} {% endautoescape %}</td>
-						</tr> 
-						{% endfor %}
-					</tbody>
-				</table>
+			{% for news in lastNews %}
+			<div class="row">
+				<div class="col-md-3 text-center"><strong>{{ news.date_created }}</strong> {{ news.author.first_name }} {{ news.author.last_name }}</div>
+				<div class="col-md-9 text-justify">{% autoescape off %} {{ news.content }} {% endautoescape %}</div>
 			</div>
+			{% endfor %}
 			<p class="text-justify border">[<a href="/news/" title="Přehled novinek">všechny novinky</a>]</p>
 		</div>
 	</div>
