--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Stará Krč - Historie městské části Praha-Krč">
+		<meta name="keywords" content="Krč, Praha 4, Praha, Historie, Fotografie, Pohlednice, Sečkár, Alois Sečkár, Anton Sečkár, Alois Papírník">
 		<title>{{ site_name }}</title>
 		<!-- BOOTSTRAP CSS -->
 		<script type="application/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -15,6 +17,15 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'css/ellhistory.css' %}" />
 		<!-- ICON -->
 		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}"/>
+		<!-- SOCIAL NETWORKS -->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Stará Krč - Historie městské části Praha-Krč" />
+		<meta property="og:description" content="Historické pohlednice a články" />
+		<meta property="og:image" content="/upload/image/1386270562.jpg" />
+		<meta property="og:url" content="http://krc-historie.cz/"/>
+		<meta name="twitter:title" content="Stará Krč - Historie městské části Praha-Krč" />
+		<meta name="twitter:image" content="/upload/image/1386270562.jpg" />
+		<meta name="twitter:url" content="http://krc-historie.cz/" />	
 	</head>
 	<body style="background-color: {{ site_bg }};">
 		<nav class="navbar navbar-inverse">
