serving files in production

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Stará Krč - Historie městské části Praha-Krč" />
 		<meta property="og:description" content="Historické pohlednice a články" />
-		<meta property="og:image" content="/static/stara-krc.jpg" />
+		<meta property="og:image" content="http://krc-historie.cz/static/stara-krc.jpg" />
 		<meta property="og:url" content="http://krc-historie.cz/"/>
 		<meta name="twitter:title" content="Stará Krč - Historie městské části Praha-Krč" />
-		<meta name="twitter:image" content="/static/stara-krc.jpg" />
+		<meta name="twitter:image" content="http://krc-historie.cz/static/stara-krc.jpg" />
 		<meta name="twitter:url" content="http://krc-historie.cz/" />	
 	</head>
 	<body style="background-color: {{ site_bg }};">
